# TRIP-ROS2-cpp-serial

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: test-pkg-action.yml
config/: communication.yaml  robot_model.yaml
include/trip_interface/: differential_drive_model.cpp  differential_drive_model.h  encoder.cpp  encoder.h  error_codes.cpp  error_codes.h  motor.cpp  motor.h  serial_interface.cpp  serial_interface.h  serial_robot_interface.cpp  serial_robot_interface.h  trip_serial_interface.cpp  trip_serial_interface.h
launch/: trip.launch.py
msg/: Encoder.msg  RoboIo.msg
src/: trip_base.cpp  trip_unicycle.cpp
test/: differential_drive_model_unittest.cpp  encoder_unittest.cpp  motor_unittest.cpp  serial_interface_unittest.cpp  trip_serial_interface_unittest.cpp
